Fix vertical spacing in section 'Lets Walk the Talk'.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -200,7 +200,7 @@ body {
 */
 .section--lets-walk-the-talk .lead {
   font-size: 1.5rem;
-  margin-top: 2.2rem !important
+  margin-top: 2rem !important
 }
 
 /**
